# opentelemetry-instrumentation-eodag

./: .pre-commit-config.yaml  CONTRIBUTING.rst  get_pypi_latest_version.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
grafana/: dashboard.json
src/opentelemetry/instrumentation/eodag/: __init__.py  init_telemetry.py  metrics.py  package.py  tracing.py
tests/: __init__.py  test_telemetry.py
