[metadata]
name = opentelemetry-instrumentation-eodag
description = Earth Observation Data Access Gateway
long_description = file:README.rst
long_description_content_type = text/x-rst
author = CS GROUP - France (CSSI)
author_email = eodag@csgroup.space
url = https://github.com/CS-SI/opentelemetry-instrumentation-eodag
license = Apache 2.0
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/CS-SI/opentelemetry-instrumentation-eodag/issues/
    Source Code = https://github.com/CS-SI/opentelemetry-instrumentation-eodag

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    eodag[server]
    opentelemetry-api
    opentelemetry-sdk


[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-html
    pytest-xdist
    pytest-socket
    pytest-instafail
    tox
    wheel
    twine
    flake8
    pre-commit
instruments =
    eodag[server]

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests

[options.package_data]
* =
    LICENSE
    NOTICE
    py.typed

[options.entry_points]
opentelemetry_instrumentor =
    eodag = opentelemetry.instrumentation.eodag:EODAGInstrumentor

[flake8]
ignore = E203, W503
max_line_length = 120
exclude =
    .git,
    __pycache__,
    .tox,
    build,
    dist,
    docs/conf.py,
    tests/context.py

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
ensure_newline_before_comments = True
known_first_party = tests
known_third_party = concurrent.futures
default_section = THIRDPARTY

[pydocstyle]
# Check for docstring presence only
select = D1
add_ignore = D107,D100,D105
# Don't require docstrings for tests or setup
match = (?!test|setup).*\.py
